# SpecialRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  使用说明.md
PageIndex-main/: README.md  pyproject.toml
PageIndex-main/pageindex/: client.py  config.yaml  page_index.py  utils.py
docker/: entrypoint.sh
nanobot-main/: .gitignore
nanobot-main/nanobot/agent/tools/: doc_tools.py
nanobot-main/nanobot/skills/document-qa/: SKILL.md
nanobot-main/webui/: package-lock.json
nanobot-main/webui/src/: App.tsx  globals.css
nanobot-main/webui/src/components/settings/: SettingsView.tsx
nanobot-main/webui/src/i18n/locales/en/: common.json
skills/document-qa/: SKILL.md
src/: run_gateway.py  run_index.py
src/doc_rag/: __init__.py  chunk_store.py  cli.py  nanobot_doc_tools.py  tools.py
