[project]
name = "pageindex"
version = "0.1.0"
description = "Vectorless, reasoning-based RAG using hierarchical document indexing"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "litellm>=1.0",
    "pymupdf>=1.25",
    "PyPDF2>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pageindex"]
